--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
     <p class="cardQr__body">
       Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
     </p>
-  </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      <br>
+      Coded by <a href="https://github.com/alekelbar">alekelbar</a>.
+    </div>
 
-  <!-- <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>. -->
   </div>
 </body>
 
